/*
 * $Id: ChangeLog,v 1.5038 2006/06/28 20:19:43 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-06-28 18:00 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
   * xharbour.spec
    !added libsqlrdd*.a
  * source/cgi/tcgi.prg
    source/cgi/htmutil.prg
    ! minor fix    

2006-06-28 22:20 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/bin/pack_src.bat
  * xharbour/bin/pack_src.sh
    + added USRRDD

2006-06-28 18:50 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapi.h
  * xharbour/source/vm/classes.c
    + added hb_objHasMessage() and hb_objSendMessage() - both operate
      on PHB_DYNS as message identifer so should be noticable faster
      if user code cache hb_dynsymFind() result. These functions also
      exists in Harbour.

2006-06-28 09:27 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * ./makefile.bc
    * Added GTGUI.
  * source/rtl/gtgui/Makefile
    * Changed LIBNAME to gtgui .

2006-06-28 02:32 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapigt.h
  * xharbour/source/rtl/gtgui/gtdef.c
    * register "GUI" GT as default one by executing
      hb_gtSetDefault( "GUI" ) at startup

2006-06-27 23:25 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbrddcdx.h
  * xharbour/include/hbrdddbf.h
  * xharbour/include/hbrdddbt.h
  * xharbour/include/hbrddfpt.h
  * xharbour/include/hbrddntx.h
  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfdbt/dbfdbt1.c
  * xharbour/source/rdd/dbffpt/dbffpt1.c
  * xharbour/source/rdd/dbfntx/dbfntx1.c
    * removed SYSNAME() method - use the default WA one.

  * xharbour/source/vm/hvm.c
    ! fixed HB_P_MACROPUSHINDEX
      - fixed GPF in direct uninitialized HB_ITEM assignment
      - fixed memory leak