@@ -1,5 +1,5 @@
 /*
- * $Id: dbcmd.c,v 1.195 2006/06/07 15:57:30 druzus Exp $
+ * $Id: dbcmd.c,v 1.196 2006/06/14 13:56:20 druzus Exp $
  */
 
 /*
@@ -4213,8 +4213,19 @@ static ERRCODE hb_dbTransStruct( AREAP lpaSource, AREAP lpaDest,
                fAll = FALSE;
             if( uiPosDst )
             {
-               lpdbTransInfo->lpTransItems[ uiSize ].uiSource = uiCount;
-               lpdbTransInfo->lpTransItems[ uiSize++ ].uiDest = uiPosDst;
+               USHORT ui;
+
+               /* check for replicated field names in source area */
+               for( ui = 0; ui < uiSize; ++ui )
+               {
+                  if( lpdbTransInfo->lpTransItems[ ui ].uiDest == uiPosDst )
+                     break;
+               }
+               if( ui == uiSize )
+               {
+                  lpdbTransInfo->lpTransItems[ uiSize ].uiSource = uiCount;
+                  lpdbTransInfo->lpTransItems[ uiSize++ ].uiDest = uiPosDst;
+               }
             }
          }
          hb_itemRelease( pItem );
